<resources>
    <string name="app_name">My Application</string>
    <string name="measure_heart_rate">Measure Heart Rate</string>
    <string name="measure_respiratory_rate">Measure Respiratory Rate</string>
    <string name="upload_signs">Upload Signs</string>
    <string name="symptoms">Symptoms</string>
    <string name="bpm">BPM</string>
    <string name="diashield">DIASHIELD</string>
    <string name="zero">0</string>
    <string name="upload">UPLOAD SIGNS</string>
    <string name="symptom_page">SYMPTOMS</string>
    <string name="save">SAVE</string>
    <string name="sym">SYMPTOM NAME</string>
</resources>